# local-ai-voice-chat

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatHeader.tsx  ChatMessage.tsx  ChatMessages.tsx  ChatSettingsModal.tsx  ConfirmModal.tsx  ControlBar.tsx  ConversationItem.tsx  GlobalSettingsModal.tsx  Header.tsx  InputBar.tsx  MarkdownRenderer.tsx  MemoryExplorerModal.tsx  MemoryIndicator.tsx  MermaidDiagram.tsx  ModelSelector.tsx  SearchResultsList.tsx  Sidebar.tsx  StatusBar.tsx  VoiceSelector.tsx
frontend/src/hooks/: useAudioStream.ts  useConversations.ts  useSearch.ts  useWebSocket.ts
frontend/src/types/: index.ts
frontend/src/utils/: audioUtils.ts  soundUtils.ts
scripts/: setup_models.sh
src/: __init__.py  config.py  main.py
src/audio/: __init__.py  capture.py  playback.py
src/interfaces/: __init__.py  cli.py  web.py
src/pipeline/: __init__.py  llm.py  sentencizer.py  stt.py  tool_parser.py  tools.py  tts.py  tts_markdown_filter.py  vad.py  wakeword.py
src/storage/: __init__.py  conversations.py  memories.py
web/: index.html
